Version 6.4.1
- Added MKDIR function for BASIC
- Added support for NeoYume style ARGv parameters in C
- Fixed `-x` option in flexcc
- Fixed interaction between Parallax FS and stdio FILEs when multiple FILEs are open
- Made _geterror() clear the error number
- Re-factored some code to reduce bloat a bit

Version 6.4.0
- Added getcrc() builtin for Spin2
- Added VFS layer for Parallax flash file system
- Added recognition for "$" and "%" to __builtin_atoi
- Changed littlefs to not return . and .. entries in path search (so it matches host fs and FATFS)
- Fixed compilation error for object arrays in bytecode
- Fixed some quirks in the space/tab warning code
- Fixed incorrect expansion of field[ptr][n]~~
- Fixed an incompatibility between _tx and debug()
- Fixed timeout in _rxraw() (test was wrong way around)
- Improved range of sin and cos functions
- Improved performance of flash access in littlefs (thanks, Evan!)
- Updated -gbrk code to most recent from Chip, and add support for brk #0 interactive debug (thanks, Ada!)

Version 6.3.0
- Added #pragma exportdef to make defines apply in other files. This
  provides another way for top level objects to control sub-objects' behavior.
- Added freopen(), tmpfile(), mktemp(), and some other stdio functions
- Added some missing math functions
- Cleaned up PSRAM access methods and made them more consistent
- Correctly handled casts to void in nucode output
- Fixed some problems with sizeof() used to declare local variables
- Fixed incorrect multiple casting of union initialization
- Fixed incorrect evaluation of unsigned constant expressions
- Fixed an over-eager register rename in the optimizer
- Fixed a bug which caused incorrect type inference for method variables in P1 ROM bytecode
- Several improvements to C locale() related functions

Version 6.2.3
- Added strpbrk(), strcoll(), strspn() functions for the C library
- Fixed a potential crash in Spin2 parsing of @func()