@@ -18,7 +18,7 @@ extern "C" {
 
     int    mbsinit(const mbstate_t *ps) _IMPL("libc/wchar/mbsinit.c");
     size_t mbrlen(const char *__restrict s, size_t n, mbstate_t *__restrict ps) _IMPL("libc/wchar/mbrlen.c");
-    size_t mbrtowc( wchar_t *pwc, const char *s, size_t n, mbstate_t *ps) _IMPL("libc/wchar/mbrtowc_utf.c");
+    size_t mbrtowc( wchar_t *pwc, const char *s, size_t n, mbstate_t *ps) _IMPL("libc/wchar/mbrtowc_ascii.c");
     size_t wcrtomb( char *s, wchar_t wc, mbstate_t *ps ) _IMPL("libc/wchar/wcrtomb_ascii.c");
     size_t mbsrtowcs( wchar_t *dst, const char **src, size_t n, mbstate_t *ps) _IMPL("libc/wchar/mbsrtowcs.c");
 
